--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <item
     android:id="@+id/navigation_home"
-    android:icon="@drawable/ic_home_black_24dp"
+    android:icon="@drawable/ic_play_button"
+      android:enabled="true"
+      app:showAsAction="ifRoom"
     android:title="@string/tab_now_playing"/>
 
   <item
     android:id="@+id/navigation_favorites"
-    android:icon="@drawable/ic_favorite"
+    android:icon="@drawable/ic_heart"
+      android:enabled="true"
+      app:showAsAction="ifRoom"
     android:title="@string/tab_favorite"/>
 
   <item
     android:id="@+id/navigation_settings"
-    android:icon="@drawable/ic_settings"
+    android:icon="@drawable/ic_controls"
+      android:enabled="true"
+      app:showAsAction="ifRoom"
     android:title="@string/tab_settings"/>
+
+  <item
+      android:id="@+id/navigation_menu"
+      android:icon="@drawable/ic_menu"
+      android:title="@string/tab_more"/>
 
 </menu>
