--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
   <color name="text_deep_gray">@color/deep_gray</color>
   <color name="text_gray">@color/gray</color>
   <color name="text_light_gray">@color/light_gray</color>
+  <color name="gray_light">#CABBBBBB</color>
 </resources>
