--- a/app/src/main/res/values-xlarge/dimens.xml
+++ b/app/src/main/res/values-xlarge/dimens.xml
@@ -21,6 +21,8 @@
   <dimen name="text_med">16sp</dimen>
   <dimen name="text_small">14sp</dimen>
 
+  <dimen name="design_bottom_navigation_item_max_width" tools:override="true">300dp</dimen>
+  <dimen name="design_bottom_navigation_active_item_max_width" tools:override="true">300dp</dimen>
 
   <!-- Overriding system defaults. -->
   <dimen name="design_bottom_navigation_text_size" tools:ignore="PrivateResource">14sp</dimen>
