--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@drawable/bg_activity"
     tools:context=".ui.activity.MainActivity">
 
     <android.support.v4.view.ViewPager
@@ -20,9 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@drawable/shadow"
+        android:theme="@style/Widget.BottomNavigationView"
         app:itemIconTint="@drawable/sel_bottom_navigation"
         app:itemTextColor="@drawable/sel_bottom_navigation"
-        app:layout_behavior="com.github.brianspace.behaviors.AutoHideWhenScrollDownBehavior"
         app:menu="@menu/navigation" />
 
 
