--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -1,88 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  tools:context="com.github.brianspace.moviebrowser.ui.activity.MovieDetailsActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.github.brianspace.moviebrowser.ui.activity.MovieDetailsActivity">
 
-  <data>
-    <variable
-      name="movie"
-      type="com.github.brianspace.moviebrowser.viewmodels.MovieDetailsViewModel"/>
-    <variable
-      name="similarMovies"
-      type="com.github.brianspace.moviebrowser.viewmodels.IMovieList"/>
-  </data>
+    <data>
 
-  <android.support.design.widget.CoordinatorLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    app:messageSource="@{movie.message}">
+        <variable
+            name="movie"
+            type="com.github.brianspace.moviebrowser.viewmodels.MovieDetailsViewModel" />
 
-    <android.support.design.widget.AppBarLayout
-      android:id="@+id/app_bar"
-      android:layout_width="match_parent"
-      android:layout_height="@dimen/app_bar_height"
-      android:fitsSystemWindows="true"
-      android:theme="@style/AppTheme.AppBarOverlay">
+        <variable
+            name="similarMovies"
+            type="com.github.brianspace.moviebrowser.viewmodels.IMovieList" />
+    </data>
 
-      <android.support.design.widget.CollapsingToolbarLayout
-        android:id="@+id/toolbar_layout"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        app:title="@{movie.title}"
-        app:contentScrim="?attr/colorPrimary"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        app:messageSource="@{movie.message}">
 
-        <com.github.brianspace.widgets.FixedAspectRatioImage
-          android:id="@+id/backdrop_image"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:scaleType="centerCrop"
-          app:aspect_ratio="0.56"
-          app:movieBackdrop="@{movie}"
-          app:layout_collapseMode="parallax"
-          app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"/>
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/app_bar_height"
+            android:fitsSystemWindows="true"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
-          android:id="@+id/toolbar"
-          android:layout_width="match_parent"
-          android:layout_height="?attr/actionBarSize"
-          app:layout_collapseMode="pin"
-          app:layout_scrollFlags="scroll|enterAlways"
-          app:popupTheme="@style/AppTheme.PopupOverlay"
-          app:titleTextAppearance="@style/Toolbar.TitleText"/>
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/toolbar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:expandedTitleTextAppearance="@font/raleway_medium"
+                app:collapsedTitleTextAppearance="@font/raleway_medium"
+                app:contentScrim="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:title="@{movie.title}">
 
-      </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
+                <com.github.brianspace.widgets.FixedAspectRatioImage
+                    android:id="@+id/backdrop_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerCrop"
+                    app:aspect_ratio="0.56"
+                    app:layout_collapseMode="parallax"
+                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
+                    app:movieBackdrop="@{movie}" />
 
-    <com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout
-      android:id="@+id/swipe_refresh"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      app:layout_behavior="@string/appbar_scrolling_view_behavior">
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    app:layout_collapseMode="pin"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:popupTheme="@style/AppTheme.PopupOverlay"
+                    app:titleTextAppearance="@style/Toolbar.TitleText" />
 
-      <com.github.brianspace.widgets.DynamicGridView
-        android:id="@+id/similar_movie_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_poster"/>
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
 
-    </com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout>
+        <com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout
+            android:id="@+id/swipe_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.design.widget.FloatingActionButton
-      android:id="@+id/fab"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_margin="@dimen/fab_margin"
-      android:onClick="@{()->movie.onClickFavorite()}"
-      android:src="@drawable/ic_favorite_border"
-      android:tint="@color/text_white"
-      app:layout_anchor="@id/app_bar"
-      app:layout_anchorGravity="bottom|end"
-      app:state="@{movie.state}"/>
+            <com.github.brianspace.widgets.DynamicGridView
+                android:id="@+id/similar_movie_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_poster_details" />
 
-  </android.support.design.widget.CoordinatorLayout>
+        </com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/fab_margin"
+            android:onClick="@{()->movie.onClickFavorite()}"
+            android:src="@drawable/ic_heart"
+            android:tint="@color/text_white"
+            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimary"
+            app:backgroundTint="@color/colorPrimary"
+            app:layout_anchor="@id/app_bar"
+            app:layout_anchorGravity="bottom|end"
+            app:state="@{movie.state}" />
+
+    </android.support.design.widget.CoordinatorLayout>
 
 </layout>
