--- a/app/src/main/res/layout/item_poster.xml
+++ b/app/src/main/res/layout/item_poster.xml
@@ -1,52 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <data>
-    <variable
-      name="movie"
-      type="com.github.brianspace.moviebrowser.viewmodels.MovieViewModel"/>
-  </data>
+    <data>
 
-  <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <com.github.brianspace.widgets.FixedAspectRatioImage
-      android:id="@+id/image"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:background="@color/colorImageBackground"
-      android:minWidth="@dimen/default_poster_width"
-      android:onClick="@{movie::onClickItem}"
-      android:scaleType="centerCrop"
-      app:aspect_ratio="1.5"
-      app:moviePoster="@{movie}"/>
-    <RatingBar
-      android:id="@+id/rating"
-      style="?android:attr/ratingBarStyleSmall"
-      android:alpha="0.6"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginBottom="@dimen/grid_spacing"
-      android:layout_marginStart="@dimen/grid_spacing"
-      android:layout_marginLeft="@dimen/grid_spacing"
-      android:layout_gravity="start|bottom"
-      android:isIndicator="true"
-      android:numStars="5"
-      android:rating="@{movie.rating}"
-      android:stepSize="0.1"/>
-    <ImageView
-      android:layout_width="@dimen/favorite_icon_size"
-      android:layout_height="@dimen/favorite_icon_size"
-      android:layout_marginTop="@dimen/grid_spacing"
-      android:layout_marginEnd="@dimen/grid_spacing"
-      android:layout_marginRight="@dimen/grid_spacing"
-      android:layout_gravity="end|top"
-      android:contentDescription="@{movie.title}"
-      android:scaleType="centerInside"
-      android:src="@drawable/ic_favorite"
-      android:tint="@color/colorAccent"
-      app:visibility="@{movie.isFavorite}"/>
-  </FrameLayout>
+        <variable
+            name="movie"
+            type="com.github.brianspace.moviebrowser.viewmodels.MovieViewModel" />
+    </data>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_card"
+        android:elevation="2dp"
+        android:onClick="@{movie::onClickItem}"
+        android:padding="15dp">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="15dp"
+            android:adjustViewBounds="true"
+            android:elevation="5dp"
+            android:padding="2dp"
+            android:scaleType="centerCrop"
+            app:moviePoster="@{movie}" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="2dp"
+            android:layout_toRightOf="@+id/image"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="@{movie.title}"
+            android:textColor="@color/black"
+            app:fontFamily="@font/raleway_medium"
+            />
+
+        <TextView
+            android:id="@+id/tv_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_title"
+            android:layout_marginBottom="2dp"
+            android:layout_toRightOf="@+id/image"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="@{movie.tagline}"
+            app:fontFamily="@font/raleway_light" />
+
+        <RatingBar
+            android:id="@+id/rating"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_description"
+            android:layout_marginBottom="2dp"
+            android:layout_toRightOf="@+id/image"
+            android:alpha="0.6"
+            android:isIndicator="true"
+            android:numStars="5"
+            android:rating="@{movie.rating}"
+            android:stepSize="0.1" />
+
+        <ImageView
+            android:layout_width="@dimen/favorite_icon_size"
+            android:layout_height="@dimen/favorite_icon_size"
+            android:layout_below="@+id/rating"
+            android:layout_marginEnd="@dimen/grid_spacing"
+            android:layout_marginRight="@dimen/grid_spacing"
+            android:layout_marginTop="@dimen/grid_spacing"
+            android:layout_toRightOf="@+id/image"
+            android:contentDescription="@{movie.title}"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_favorite"
+            android:tint="@color/colorAccent"
+            app:visibility="@{movie.isFavorite}" />
+    </RelativeLayout>
 
 </layout>
