--- a/app/src/main/res/layout/view_movie_list.xml
+++ b/app/src/main/res/layout/view_movie_list.xml
@@ -1,40 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  tools:context="com.github.brianspace.moviebrowser.ui.fragment.MovieListFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.github.brianspace.moviebrowser.ui.fragment.MovieListFragment">
 
-  <data>
-    <variable
-      name="movieListForBinding"
-      type="com.github.brianspace.moviebrowser.viewmodels.IMovieList"/>
-  </data>
+    <data>
 
-  <FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+        <variable
+            name="movieListForBinding"
+            type="com.github.brianspace.moviebrowser.viewmodels.IMovieList" />
+    </data>
 
-    <com.github.brianspace.widgets.SwipeRefreshLayoutEx
-      android:id="@+id/swipe_refresh"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
-
-      <com.github.brianspace.widgets.DynamicGridView
-        android:id="@+id/movie_list"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_poster"/>
+        android:layout_height="match_parent">
 
-    </com.github.brianspace.widgets.SwipeRefreshLayoutEx>
+        <com.github.brianspace.widgets.SwipeRefreshLayoutEx
+            android:id="@+id/swipe_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <ProgressBar
-      android:id="@+id/loading"
-      style="?android:progressBarStyleLarge"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="center"
-      android:visibility="gone"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/movie_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:orientation="vertical"
+                android:paddingBottom="25dp"
+                android:paddingLeft="25dp"
+                android:paddingRight="25dp"
+                android:paddingTop="25dp"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_poster" />
 
-  </FrameLayout>
+        </com.github.brianspace.widgets.SwipeRefreshLayoutEx>
+
+        <ImageView
+            android:id="@+id/iv_nodata"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:gravity="center_horizontal"
+            android:src="@drawable/ic_popcorn"
+            android:visibility="visible"
+            android:layout_gravity="center_vertical|center_horizontal"
+            />
+
+
+        <ProgressBar
+            android:id="@+id/loading"
+            style="?android:progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+
+    </FrameLayout>
 
 </layout>
