--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools"
   tools:ignore="UnusedResources">
-  <color name="colorPrimary">#03A9F4</color>
-  <color name="colorPrimaryDark">#0277BD</color>
+  <color name="colorPrimary">#00B0EA</color>
+  <color name="colorPrimaryDark">#00B0EA</color>
   <color name="colorAccent">#FF9800</color>
 
   <color name="colorImageBackground">#B6B6B6</color>
