--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,84 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:paddingTop="@dimen/activity_vertical_margin"
-  android:paddingLeft="@dimen/activity_horizontal_margin"
-  android:paddingRight="@dimen/activity_horizontal_margin">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-  <TextView
-    android:id="@+id/clear_data_label"
-    style="@style/SettingsCategory"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/setting_category_data"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"/>
-  <TextView
-    android:id="@+id/clear_cache_summary"
-    style="@style/SettingsSummary"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:layout_marginRight="@dimen/text_margin"
-    android:layout_marginEnd="@dimen/text_margin"
-    android:text="@string/setting_clear_cache_summary"
-    android:gravity="center_vertical"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toStartOf="@+id/clear_cache_btn"
-    app:layout_constraintTop_toTopOf="@+id/clear_cache_btn"
-    app:layout_constraintBottom_toBottomOf="@id/clear_cache_btn"/>
-  <Button
-    android:id="@+id/clear_cache_btn"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/text_margin"
-    android:layout_marginBottom="@dimen/text_margin"
-    android:text="@string/setting_clear_cache"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/clear_data_label"
-    />
-  <TextView
-    android:id="@+id/clear_data_summary"
-    style="@style/SettingsSummary"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:layout_marginRight="@dimen/text_margin"
-    android:layout_marginEnd="@dimen/text_margin"
-    android:text="@string/setting_clear_data_summary"
-    android:gravity="center_vertical"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toStartOf="@+id/clear_data_btn"
-    app:layout_constraintTop_toTopOf="@+id/clear_data_btn"
-    app:layout_constraintBottom_toBottomOf="@id/clear_data_btn"/>
-  <Button
-    android:id="@+id/clear_data_btn"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/text_margin"
-    android:layout_marginBottom="@dimen/text_margin"
-    android:text="@string/setting_clear_data"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/clear_cache_btn"
-    app:layout_constraintStart_toStartOf="@id/clear_cache_btn"
-    />
-  <TextView
-    android:id="@+id/about_label"
-    style="@style/SettingsCategory"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/setting_category_about"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/clear_data_summary"/>
-  <TextView
-    android:id="@+id/about_summary"
-    style="@style/SettingsSummary"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/text_margin"
-    android:text="@string/setting_about_summary"
-    android:gravity="center_vertical"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/about_label"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@drawable/bg_card"
+        android:elevation="2dp"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:id="@+id/clear_data_label"
+            style="@style/SettingsCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/setting_category_data"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/clear_cache_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_below="@+id/clear_data_label"
+            android:background="@drawable/bg_button_round"
+            android:text="@string/setting_clear_cache"
+            android:textSize="12sp" />
+
+
+        <Button
+            android:id="@+id/clear_data_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/clear_data_label"
+            android:layout_marginBottom="@dimen/text_margin"
+            android:layout_marginTop="@dimen/text_margin"
+            android:layout_alignTop="@+id/clear_cache_btn"
+            android:layout_toRightOf="@+id/clear_cache_btn"
+            android:background="@drawable/bg_button_round"
+            android:text="@string/setting_clear_data"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/about_label"
+            style="@style/SettingsCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/setting_category_about"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clear_data_btn" />
+
+        <TextView
+            android:id="@+id/about_summary"
+            style="@style/SettingsSummary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/text_margin"
+            android:gravity="center_vertical"
+            android:text="@string/setting_about_summary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/about_label" />
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
